Use BitbucketServer repository browser for Data Center or Server (#929)